@@ -137,7 +137,7 @@ OMPI_LOG_COMMAND(
     OMPI_LOG_COMMAND(
         [$OMPI_F77 $FFLAGS -c conftestf77.f],
         OMPI_LOG_COMMAND(
-            [$OMPI_F90 $FCFLAGS -o conftest conftestf90.o conftestf77.o $LIBS],
+            [$OMPI_F90 $FCFLAGS -o conftest conftestf90.o conftestf77.o $LDFLAGS $LIBS],
             [HAPPY=1],
             [HAPPY=0]),
 	[HAPPY=0]),
